# perimetry_package

./: README.md  get_data.py  humphrey_perimetry.py  octopus_perimetry.py  perimetry.py  setup.cfg
perimetry/: __init__.py  get_data.py  humphrey_perimetry.py  octopus_perimetry.py  perimetry.py
