'''
setup.cfg is the configuration file for setuptools. It tells setuptools about your package (such as the name and
version) as well as which code files to include.
https://packaging.python.org/tutorials/packaging-projects/
'''

[metadata]
# replace with your username:
name = example-pkg-YOUR-USERNAME-HERE
version = 0.0.1
author = Marta Ferrer
author_email = mferresu@gmail.com
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/martaferrer/perimetry_package
project_urls =
    Bug Tracker = https://github.com/martaferrer/perimetry_package/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6